# If pep517.build fails with an error of the form
# ```
# running egg_info
# error: Invalid distribution name or version syntax: -mypackage---0.0.1-
# ```
# remove the quotes from strings in the `setup.cfg` file.
[metadata]
name = upfork
version = 0.1.0

[options]
packages = upfork
install_requires =
    pexpect >= "4.8"; python_version >= "3.8"

[options.entry_points]
console_scripts = 
    main = upfork.upfork:main

