# If pep517.build fails with an error of the form
# ```
# running egg_info
# error: Invalid distribution name or version syntax: -mypackage---0.0.1-
# ```
# remove the quotes from strings in the `setup.cfg` file for the 'name'
# and 'version' fields.
[metadata]
name = upfork
version = 0.1.2
description = "A python program for automating git fork updates."
author = "LambdaXymox"
author_email = "lambda.xymox@gmail.com"
url = "https://github.com/lambdaxymox/upfork"
download_url = "https://github.com/lambdaxymox/upfork"


[options]
packages = upfork
install_requires =
    pexpect >= "4.8"; python_version >= "3.8"

[options.entry_points]
console_scripts = 
    upfork = upfork:upfork_main

